refactor: '_' for unused vars + upgrade to jdk 21